# SPDX-FileCopyrightText: 2025 LichtFeld Studio Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "DoF"
version = "0.1.1"
description = "Depth of Field visualization using Grayscale depthmaps for Gaussian Splats"
author = "Brian Davis (bb6)"

dependencies = [
    "opencv-python", "numpy", "PySide6" 
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.2"
required_features = []
